dnl Process this file with autoconf to produce a configure script.

# $Id$
# This is my first experience with autoconf, so look elsewhere
# for a good example of how to use this.

AC_INIT(xwm.c)

AC_PROG_CC
AC_EXEEXT
AC_OBJEXT

AC_PATH_XTRA

if test $no_x ; then
   AC_MSG_ERROR(You do not have the X development libraries installed)
fi
XLIBS="-lX11"

shape=yes
AC_ARG_ENABLE(shape,
        [  --disable-shape         disable shape extension],
        shape=$enable_val, shape=yes)
if test "$shape" = yes ; then
   AC_CHECK_LIB(Xext, XShapeQueryVersion,
               [XLIBS="-lXext $XLIBS"
                AC_DEFINE(SHAPE)], shape=no, $X_CFLAGS $X_LIBS $XLIBS)
fi
                
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h limits.h)

AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_FUNC_SETVBUF_REVERSED
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select poll strdup snprintf _snprintf)

AC_CONFIG_HEADER(config.h)

AC_SUBST(XLIBS)
AC_OUTPUT(Makefile)
